--- a/SDVirusChecker/app/src/main/AndroidManifest.xml
+++ b/SDVirusChecker/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sdviruschecker.seginf.sdviruschecker">
+    package="com.seginf.sdviruschecker">
 
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
